--- a/wp-content/themes/mjdev-child/assets/css/portfolio.css
+++ b/wp-content/themes/mjdev-child/assets/css/portfolio.css
@@ -79,6 +79,7 @@ body {
 .splash-text {
     font-size: clamp(14px, 2.5vw, 18px);
     margin-bottom: 40px;
+    margin-top:440px;
     max-width: 600px;
     padding: 0 20px;
     position: relative;
@@ -334,7 +335,7 @@ body {
     height: 600px;
     overflow: hidden;
     position: relative;
-    box-shadow: 0 20px 60px rgba(0, 0, 0, 0.1);
+   /* box-shadow: 0 20px 60px rgba(0, 0, 0, 0.1);*/
     transition: transform 0.5s ease;
 }
 
